@@ -289,7 +289,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12773) addOnloadHook() now calls functions immediately when scripts are
   loaded after the primary page completion, instead of dropping them
 * (bug 14199) Fix deletion form for image redirect pages
-
+* (bug 14220) Disabling $wgCheckFileExtensions now works without also
+  disabling $wgStrictFileExtensions
 
 === API changes in 1.13 ===
 
